--- a/config.ini
+++ b/config.ini
@@ -1,26 +1,30 @@
 [training]
 batch_size = 64
-gradient_accumulation_steps = 4
-total_round = 6
+gradient_accumulation_steps = 8
+total_round = 5
 drop_out = 0.5
-num_workers = 2
+num_workers = 1
 step1_epochs = 10
 step2_epochs = 10
 num_protos = 1
-device = cuda
+device0 = cuda:0
+device1 = cuda:1
 seed = 100
 max_grad_norm = 10
 task_length = 8
 kl_temp = 2
 temp = 0.1
+infonce_lossfactor = 0.5
 
 [Encoder]
 bert_path = ./bert-base-uncased
 max_length = 256
-vocab_size = 30522
+vocab_size = 32000
+hidden_size = 4096
 marker_size = 4
 pattern = entity_marker
-encoder_output_size = 768
+encoder_output_size = 4096
+output_size = 4096
 
 
 [dropout]
